2020-02-22 Jan Kotanski <jan.kotanski@desy.de>
	* add globallogger
	* tagged as 2.35.5

2020-02-22 Jan Kotanski <jan.kotanski@desy.de>
	* update help
	* tagged as 2.35.4

2020-02-21 Jan Kotanski <jan.kotanski@desy.de>
	* set refreshrate for tine
	* tagged as 2.35.3

2020-02-20 Jan Kotanski <jan.kotanski@desy.de>
	* fix for source status
	* tagged as 2.35.2

2020-02-20 Jan Kotanski <jan.kotanski@desy.de>
	* tune widget text
	* tagged as 2.35.1

2020-02-20 Jan Kotanski <jan.kotanski@desy.de>
	* add Tine Property image source
	* add Epics PV image source
	* tagged as 2.35.0

2020-02-06 Jan Kotanski <jan.kotanski@desy.de>
	* add float type option
	* add configuration for crosshair locker
	* improve warning catching
	* tagged as 2.34.0

2020-01-31 Jan Kotanski <jan.kotanski@desy.de>
	* impove setting of sardana variables
	* tagged as 2.33.12

2020-01-15 Jan Kotanski <jan.kotanski@desy.de>
	* fix shape of LIMA VIDEO decoder
	* tagged as 2.33.11

2020-01-15 Jan Kotanski <jan.kotanski@desy.de>
	* fix reshaping of LIMA VIDEO images
	* tagged as 2.33.10

2020-01-14 Jan Kotanski <jan.kotanski@desy.de>
	* add support for variance with NAN
	* tagged as 2.33.9

2020-01-10 Jan Kotanski <jan.kotanski@desy.de>
	* fix for start/stop button update
	* tagged as 2.33.8

2020-01-10 Jan Kotanski <jan.kotanski@desy.de>
	* update help
	* add support for .hdf files
	* tagged as 2.33.7

2020-01-09 Jan Kotanski <jan.kotanski@desy.de>
	* hide/show image step
	* catch nan warnings from image tools
	* remove unneede images from help
	* tagged as 2.33.6

2020-01-08 Jan Kotanski <jan.kotanski@desy.de>
	* add icons to buttons
	* tagged as 2.33.5

2020-01-07 Jan Kotanski <jan.kotanski@desy.de>
	* add checks for endianness
	* tagged as 2.33.4

2020-01-07 Jan Kotanski <jan.kotanski@desy.de>
	* resize images in the help
	* tagged as 2.33.3

2020-01-03 Jan Kotanski <jan.kotanski@desy.de>
	* make qrc as a non module
	* tagged as 2.33.2

2020-01-03 Jan Kotanski <jan.kotanski@desy.de>
	* add rcc file