@@ -1,5 +1,6 @@
 2020-02-22 Jan Kotanski <jan.kotanski@desy.de>
 	* add globallogger
+	* impove epicspv configuration
 	* tagged as 2.35.5
 
 2020-02-22 Jan Kotanski <jan.kotanski@desy.de>
